lib/parser/src/generated/Protobuf2Parser.ts
// Generated from ./Protobuf2.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import Protobuf2Listener from "./Protobuf2Listener.js";
import Protobuf2Visitor from "./Protobuf2Visitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class Protobuf2Parser extends Parser {
	public static readonly SYNTAX = 1;
	public static readonly IMPORT = 2;
	public static readonly WEAK = 3;
	public static readonly PUBLIC = 4;
	public static readonly PACKAGE = 5;
	public static readonly OPTION = 6;
	public static readonly REPEATED = 7;
	public static readonly OPTIONAL = 8;
	public static readonly REQUIRED = 9;
	public static readonly GROUP = 10;
	public static readonly ONEOF = 11;
	public static readonly MAP = 12;
	public static readonly INT32 = 13;
	public static readonly INT64 = 14;
	public static readonly UINT32 = 15;
	public static readonly UINT64 = 16;
	public static readonly SINT32 = 17;
	public static readonly SINT64 = 18;
	public static readonly FIXED32 = 19;
	public static readonly FIXED64 = 20;
	public static readonly SFIXED32 = 21;
	public static readonly SFIXED64 = 22;
	public static readonly BOOL = 23;
	public static readonly STRING = 24;
	public static readonly DOUBLE = 25;
	public static readonly FLOAT = 26;
	public static readonly BYTES = 27;
	public static readonly RESERVED = 28;
	public static readonly EXTENSIONS = 29;
	public static readonly TO = 30;
	public static readonly MAX = 31;
	public static readonly ENUM = 32;
	public static readonly EXTEND = 33;
	public static readonly MESSAGE = 34;
	public static readonly SERVICE = 35;
	public static readonly RPC = 36;
	public static readonly STREAM = 37;
	public static readonly RETURNS = 38;
	public static readonly PROTO2_LIT_SINGLE = 39;
	public static readonly PROTO2_LIT_DOBULE = 40;
	public static readonly SEMI = 41;
	public static readonly EQ = 42;
	public static readonly LP = 43;
	public static readonly RP = 44;
	public static readonly LB = 45;
	public static readonly RB = 46;
	public static readonly LC = 47;
	public static readonly RC = 48;
	public static readonly LT = 49;
	public static readonly GT = 50;
	public static readonly DOT = 51;
	public static readonly COMMA = 52;
	public static readonly COLON = 53;
	public static readonly PLUS = 54;
	public static readonly MINUS = 55;
	public static readonly STR_LIT = 56;
	public static readonly BOOL_LIT = 57;
	public static readonly FLOAT_LIT = 58;
	public static readonly INT_LIT = 59;
	public static readonly IDENTIFIER = 60;
	public static readonly WS = 61;
	public static readonly LINE_COMMENT = 62;
	public static readonly COMMENT = 63;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_proto = 0;
	public static readonly RULE_syntax = 1;
	public static readonly RULE_importStatement = 2;
	public static readonly RULE_packageStatement = 3;
	public static readonly RULE_optionStatement = 4;
	public static readonly RULE_optionName = 5;
	public static readonly RULE_fieldLabel = 6;
	public static readonly RULE_field = 7;
	public static readonly RULE_fieldOptions = 8;
	public static readonly RULE_fieldOption = 9;
	public static readonly RULE_fieldNumber = 10;
	public static readonly RULE_group = 11;
	public static readonly RULE_oneof = 12;
	public static readonly RULE_oneofField = 13;
	public static readonly RULE_mapField = 14;
	public static readonly RULE_keyType = 15;
	public static readonly RULE_type_ = 16;
	public static readonly RULE_extensions = 17;
	public static readonly RULE_reserved = 18;
	public static readonly RULE_ranges = 19;
	public static readonly RULE_range_ = 20;
	public static readonly RULE_reservedFieldNames = 21;
	public static readonly RULE_topLevelDef = 22;
	public static readonly RULE_enumDef = 23;
	public static readonly RULE_enumBody = 24;
	public static readonly RULE_enumElement = 25;
	public static readonly RULE_enumField = 26;
	public static readonly RULE_enumValueOptions = 27;
	public static readonly RULE_enumValueOption = 28;
	public static readonly RULE_messageDef = 29;
	public static readonly RULE_messageBody = 30;
	public static readonly RULE_messageElement = 31;
	public static readonly RULE_extendDef = 32;
	public static readonly RULE_extendElement = 33;
	public static readonly RULE_serviceDef = 34;
	public static readonly RULE_serviceElement = 35;
	public static readonly RULE_rpc = 36;
	public static readonly RULE_stream = 37;
	public static readonly RULE_constant = 38;
	public static readonly RULE_blockLit = 39;
	public static readonly RULE_emptyStatement_ = 40;
	public static readonly RULE_ident = 41;
	public static readonly RULE_fullIdent = 42;
	public static readonly RULE_messageName = 43;
	public static readonly RULE_enumName = 44;
	public static readonly RULE_fieldName = 45;
	public static readonly RULE_groupName = 46;
	public static readonly RULE_oneofName = 47;
	public static readonly RULE_mapName = 48;
	public static readonly RULE_serviceName = 49;
	public static readonly RULE_rpcName = 50;
	public static readonly RULE_streamName = 51;
	public static readonly RULE_messageType = 52;
	public static readonly RULE_enumType = 53;
	public static readonly RULE_intLit = 54;
	public static readonly RULE_strLit = 55;
	public static readonly RULE_boolLit = 56;
	public static readonly RULE_floatLit = 57;
	public static readonly RULE_keywords = 58;
	public static readonly literalNames: (string | null)[] = [ null, "'syntax'", 
                                                            "'import'", 
                                                            "'weak'", "'public'", 
                                                            "'package'", 
                                                            "'option'", 
                                                            "'repeated'", 
                                                            "'optional'", 
                                                            "'required'", 
                                                            "'group'", "'oneof'", 
                                                            "'map'", "'int32'", 
                                                            "'int64'", "'uint32'", 
                                                            "'uint64'", 
                                                            "'sint32'", 
                                                            "'sint64'", 
                                                            "'fixed32'", 
                                                            "'fixed64'", 
                                                            "'sfixed32'", 
                                                            "'sfixed64'", 
                                                            "'bool'", "'string'", 
                                                            "'double'", 
                                                            "'float'", "'bytes'", 
                                                            "'reserved'", 
                                                            "'extensions'", 
                                                            "'to'", "'max'", 
                                                            "'enum'", "'extend'", 
                                                            "'message'", 
                                                            "'service'", 
                                                            "'rpc'", "'stream'", 
                                                            "'returns'", 
                                                            "'\"proto2\"'", 
                                                            "''proto2''", 
                                                            "';'", "'='", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'<'", "'>'", 
                                                            "'.'", "','", 
                                                            "':'", "'+'", 
                                                            "'-'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "SYNTAX", 
                                                             "IMPORT", "WEAK", 
                                                             "PUBLIC", "PACKAGE", 
                                                             "OPTION", "REPEATED", 
                                                             "OPTIONAL", 
                                                             "REQUIRED", 
                                                             "GROUP", "ONEOF", 
                                                             "MAP", "INT32", 
                                                             "INT64", "UINT32", 
                                                             "UINT64", "SINT32", 
                                                             "SINT64", "FIXED32", 
                                                             "FIXED64", 
                                                             "SFIXED32", 
                                                             "SFIXED64", 
                                                             "BOOL", "STRING", 
                                                             "DOUBLE", "FLOAT", 
                                                             "BYTES", "RESERVED", 
                                                             "EXTENSIONS", 
                                                             "TO", "MAX", 
                                                             "ENUM", "EXTEND", 
                                                             "MESSAGE", 
                                                             "SERVICE", 
                                                             "RPC", "STREAM", 
                                                             "RETURNS", 
                                                             "PROTO2_LIT_SINGLE", 
                                                             "PROTO2_LIT_DOBULE", 
                                                             "SEMI", "EQ", 
                                                             "LP", "RP", 
                                                             "LB", "RB", 
                                                             "LC", "RC", 
                                                             "LT", "GT", 
                                                             "DOT", "COMMA", 
                                                             "COLON", "PLUS", 
                                                             "MINUS", "STR_LIT", 
                                                             "BOOL_LIT", 
                                                             "FLOAT_LIT", 
                                                             "INT_LIT", 
                                                             "IDENTIFIER", 
                                                             "WS", "LINE_COMMENT", 
                                                             "COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"proto", "syntax", "importStatement", "packageStatement", "optionStatement", 
		"optionName", "fieldLabel", "field", "fieldOptions", "fieldOption", "fieldNumber", 
		"group", "oneof", "oneofField", "mapField", "keyType", "type_", "extensions", 
		"reserved", "ranges", "range_", "reservedFieldNames", "topLevelDef", "enumDef", 
		"enumBody", "enumElement", "enumField", "enumValueOptions", "enumValueOption", 
		"messageDef", "messageBody", "messageElement", "extendDef", "extendElement", 
		"serviceDef", "serviceElement", "rpc", "stream", "constant", "blockLit", 
		"emptyStatement_", "ident", "fullIdent", "messageName", "enumName", "fieldName", 
		"groupName", "oneofName", "mapName", "serviceName", "rpcName", "streamName", 
		"messageType", "enumType", "intLit", "strLit", "boolLit", "floatLit", 
		"keywords",
	];
	public get grammarFileName(): string { return "Protobuf2.g4"; }
	public get literalNames(): (string | null)[] { return Protobuf2Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return Protobuf2Parser.symbolicNames; }
	public get ruleNames(): string[] { return Protobuf2Parser.ruleNames; }
	public get serializedATN(): number[] { return Protobuf2Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, Protobuf2Parser._ATN, Protobuf2Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public proto(): ProtoContext {
		let localctx: ProtoContext = new ProtoContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, Protobuf2Parser.RULE_proto);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this.syntax();
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 100) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 527) !== 0)) {
				{
				this.state = 124;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 2:
					{
					this.state = 119;
					this.importStatement();
					}
					break;
				case 5:
					{
					this.state = 120;
					this.packageStatement();
					}
					break;
				case 6:
					{
					this.state = 121;
					this.optionStatement();
					}
					break;
				case 32:
				case 33:
				case 34:
				case 35:
					{
					this.state = 122;
					this.topLevelDef();
					}
					break;
				case 41:
					{
					this.state = 123;
					this.emptyStatement_();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 129;
			this.match(Protobuf2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public syntax(): SyntaxContext {
		let localctx: SyntaxContext = new SyntaxContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, Protobuf2Parser.RULE_syntax);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 131;
			this.match(Protobuf2Parser.SYNTAX);
			this.state = 132;
			this.match(Protobuf2Parser.EQ);
			this.state = 133;
			_la = this._input.LA(1);
			if(!(_la===39 || _la===40)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 134;
			this.match(Protobuf2Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let localctx: ImportStatementContext = new ImportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, Protobuf2Parser.RULE_importStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(Protobuf2Parser.IMPORT);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===3 || _la===4) {
				{
				this.state = 137;
				_la = this._input.LA(1);
				if(!(_la===3 || _la===4)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
			}

			this.state = 140;
			this.strLit();
			this.state = 141;
			this.match(Protobuf2Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public packageStatement(): PackageStatementContext {
		let localctx: PackageStatementContext = new PackageStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, Protobuf2Parser.RULE_packageStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 143;
			this.match(Protobuf2Parser.PACKAGE);
			this.state = 144;
			this.fullIdent();
			this.state = 145;
			this.match(Protobuf2Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public optionStatement(): OptionStatementContext {
		let localctx: OptionStatementContext = new OptionStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, Protobuf2Parser.RULE_optionStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(Protobuf2Parser.OPTION);
			this.state = 148;
			this.optionName();
			this.state = 149;
			this.match(Protobuf2Parser.EQ);
			this.state = 150;
			this.constant();
			this.state = 151;
			this.match(Protobuf2Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public optionName(): OptionNameContext {
		let localctx: OptionNameContext = new OptionNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, Protobuf2Parser.RULE_optionName);
		let _la: number;
		try {
			this.state = 165;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 153;
				this.fullIdent();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 159;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 1:
				case 2:
				case 3:
				case 4:
				case 5:
				case 6:
				case 7:
				case 8:
				case 9:
				case 10:
				case 11:
				case 12:
				case 13:
				case 14:
				case 15:
				case 16:
				case 17:
				case 18:
				case 19:
				case 20:
				case 21:
				case 22:
				case 23:
				case 24:
				case 25:
				case 26:
				case 27:
				case 28:
				case 29:
				case 30:
				case 31:
				case 32:
				case 33:
				case 34:
				case 35:
				case 36:
				case 37:
				case 38:
				case 57:
				case 60:
					{
					this.state = 154;
					this.ident();
					}
					break;
				case 43:
					{
					this.state = 155;
					this.match(Protobuf2Parser.LP);
					this.state = 156;
					this.fullIdent();
					this.state = 157;
					this.match(Protobuf2Parser.RP);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===51) {
					{
					this.state = 161;
					this.match(Protobuf2Parser.DOT);
					this.state = 162;
					this.fullIdent();
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fieldLabel(): FieldLabelContext {
		let localctx: FieldLabelContext = new FieldLabelContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, Protobuf2Parser.RULE_fieldLabel);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 167;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 896) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, Protobuf2Parser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 169;
			this.fieldLabel();
			this.state = 170;
			this.type_();
			this.state = 171;
			this.fieldName();
			this.state = 172;
			this.match(Protobuf2Parser.EQ);
			this.state = 173;
			this.fieldNumber();
			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===45) {
				{
				this.state = 174;
				this.match(Protobuf2Parser.LB);
				this.state = 175;
				this.fieldOptions();
				this.state = 176;
				this.match(Protobuf2Parser.RB);
				}
			}
